--- a/src/client/components/App/Header/header.less
+++ b/src/client/components/App/Header/header.less
@@ -63,6 +63,7 @@
   .header {
     flex: 0 0 60px;
     min-width: 410px;
+    box-sizing: border-box;
     border-bottom: @app-border-style;
 
     .container-logo {
@@ -98,6 +99,7 @@
   .header {
     flex: 0 0 80px;
     min-width: 695px;
+    box-sizing: border-box;
     border-left: @app-border-style;
     border-bottom: @app-border-style;
     border-right: @app-border-style;
