--- a/src/client/components/App/HomePage/HomePage.less
+++ b/src/client/components/App/HomePage/HomePage.less
@@ -1,9 +1,11 @@
 @import '../../../style/global-variable.less';
 
 .home-page {
+  padding-top: 40px;
   margin: auto;
   display: flex;
   flex-direction: column;
+  padding-bottom: 20px;
 
   &__welcome {
     letter-spacing: 0.4px;
