--- a/src/client/components/Admin/Bar/AdminBar.less
+++ b/src/client/components/Admin/Bar/AdminBar.less
@@ -1,137 +1,91 @@
-@media screen and (min-width:600px) {
-  .bar-choose-item {
-    flex: none;
-    min-width: 695px;
-    height: 40px;
-    border: 1px solid rgba(128, 128, 128, 0.4);
-    box-shadow: 0 0 7px rgba(0, 0, 0, 0.5);
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
-    background-color: #f5f5eb;
+@import '../../../style/global-variable.less';
+
+.bar-choose-item {
+  flex: none;
+  width: 100%;
+  height: 40px;
+  box-shadow: @app-box-shadows;
+  background-color: @tables-color;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  z-index: 1;
+
+  &__buttons {
     display: flex;
     align-items: center;
+    justify-content: center;
+    border-collapse: collapse;
+    width: 100%;
+
+    a:first-child {
+      border-left: none;
+    }
+
+    a {
+      flex: 1;
+      width: 100px;
+      height: 40px;
+      border-left: 1px solid #9da79d;
+
+      .button-bar {
+        height: 40px;
+        width: 100%;
+        border: none;
+        padding: 0;
+        font: inherit;
+        color: black;
+        cursor: pointer;
+        background-color: #f4f4f0;
+        outline: none;
+      }
+
+      .active {
+        background-color: rgb(233, 232, 233);
+      }
+
+      .button-bar:hover {
+        background-color: #f5f5f5;
+        color: #1a5500;
+      }
+    }
+  }
+}
+
+@media screen and (min-width:600px) {
+  .bar-choose-item {
+    min-width: 695px;
+    border: 1px solid rgba(128, 128, 128, 0.4);
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
     font-size: 15px;
-    z-index: 1;
 
     &__buttons {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-collapse: collapse;
-      width: 100%;
+      
+    a:first-child > button {
+      border-top-left-radius: 10px;
+    }
 
-      a {
-        flex: 1;
-        width: 100px;
-        height: 40px;
-        border-left: 1px solid #9da79d;
-
-        .button-bar {
-          height: 40px;
-          width: 100%;
-          border: none;
-          padding: 0;
-          font: inherit;
-          color: black;
-          cursor: pointer;
-          background-color: #f4f4f0;
-          outline: none;
-        }
-
-        .active {
-          background-color: rgb(233, 232, 233);
-        }
-
-        .button-bar:hover {
-          background-color: #f5f5f5;
-          color: #1a5500;
-        }
-      }
-
-      a:first-child {
-        border-left: none;
-      }
-
-
-      a:first-child > button {
-        border-bottom-left-radius: 5px;
-        border-top-left-radius: 5px;
-      }
-
-      a:last-child > button:last-child {
-        border-bottom-right-radius: 5px;
-        border-top-right-radius: 5px;
-      }
-
+    a:last-child > button:last-child {
+      border-bottom-right-radius: 10px;
+      border-top-right-radius: 10px;
+    }
     }
   }
 }
 
 @media screen and (max-width:600px) {
   .bar-choose-item {
-    flex: none;
-    width: 100%;
-    min-width: 430px;
-    height: 40px;
-    box-shadow: 0 0 7px rgba(0, 0, 0, 0.5);
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
-    background-color: #f5f5eb;
-    display: flex;
-    align-items: center;
-    font-size: 14px;
-    z-index: 1;
+    min-width: 410px;
+    font-size: 13px;
 
-    &__buttons {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-collapse: collapse;
-      width: 100%;
-
+    &__buttons{
       a {
-        flex: 1;
-        width: 100px;
-        height: 40px;
-        border-left: 1px solid #9da79d;
-
-        .button-bar {
-          height: 40px;
-          width: 100%;
-          border: none;
-          padding: 0;
-          font: inherit;
-          color: black;
-          cursor: pointer;
-          background-color: #f4f4f0;
-          outline: none;
-        }
-
-        .active {
-          background-color: rgb(233, 232, 233);
-        }
-
-        .button-bar:hover {
-          background-color: #f5f5f5;
-          color: #1a5500;
+        .button-bar{
+          padding-left: 5px;
+          padding-right: 5px;
         }
       }
-
-      a:first-child {
-        border-left: none;
-      }
-
-
-      a:first-child > button {
-        border-bottom-left-radius: 5px;
-        border-top-left-radius: 5px;
-      }
-
-      a:last-child > button:last-child {
-        border-bottom-right-radius: 5px;
-        border-top-right-radius: 5px;
-      }
-
     }
   }
 }
