--- a/src/client/components/Admin/TableClocks/RefactorClocks.less
+++ b/src/client/components/Admin/TableClocks/RefactorClocks.less
@@ -23,15 +23,15 @@
       flex: 1;
 
       tr {
-        height: 40px;
         margin-top: 5px;
         border-bottom: 1px solid grey;
-      }
-
-      tr:first-child {
         background-color: rgba(169, 169, 169, 0.04);
         height: 50px;
-        border-bottom: none;
+      }
+
+      th {
+        padding-left: 10px;
+        padding-right: 10px;
       }
 
       th:nth-child(1) {
@@ -53,6 +53,8 @@
 
       td {
         text-align: center;
+        padding-left: 10px;
+        padding-right: 10px;
       }
 
       td:nth-child(1) {
@@ -71,7 +73,6 @@
         button {
           width: 50%;
           height: 28px;
-          padding: 0;
           border: none;
           font-size: 13px;
           color: black;
@@ -84,7 +85,6 @@
         a > button {
           width: 50%;
           height: 28px;
-          padding: 0;
           border: none;
           background-color: inherit;
           font-size: 13px;
@@ -175,3 +175,15 @@
     }
   }
 }
+
+@media screen and (max-width:600px) {
+  .table-clocks {
+    font-size: 14px;
+  }
+}
+@media screen and (min-width:600px) {
+  .table-clocks {
+    font-size: 16px;
+  }
+}
+
