--- a/src/client/components/Admin/TableWorkers/RefactorWorkers.less
+++ b/src/client/components/Admin/TableWorkers/RefactorWorkers.less
@@ -23,67 +23,51 @@
       flex: 1;
 
       tr {
-        height: 40px;
         margin-top: 5px;
         border-bottom: 1px solid grey;
-      }
-
-      tr:first-child {
         background-color: rgba(169, 169, 169, 0.04);
         height: 50px;
-        border-bottom: none;
+      }
+
+      th {
+        padding-left: 10px;
+        padding-right: 10px;
+        border-right: 1px solid grey;
       }
 
       th:nth-child(1) {
-        width: 50px;
-        border-right: 1px solid grey;
-      }
-
-      th:nth-child(2) {
-        border-right: 1px solid grey;
-      }
-
-      th:nth-child(3) {
-        border-right: 1px solid grey;
-      }
-
-      th:nth-child(4) {
-        border-right: 1px solid grey;
+        width: 50px; 
       }
 
       th:nth-child(5) {
         width: 100px;
+        min-width: 100px;
+        border: none;
       }
 
       td {
         text-align: center;
-      }
-
-      td:nth-child(1) {
+        padding-left: 10px;
+        padding-right: 10px;
         border-right: 1px solid grey;
       }
 
       td:nth-child(2) {
         text-align: left;
         padding-left: 20px;
-        border-right: 1px solid grey;
       }
 
       td:nth-child(3) {
         text-align: left;
         padding-left: 20px;
-        border-right: 1px solid grey;
-      }
-
-      td:nth-child(4) {
-        border-right: 1px solid grey;
       }
 
       td:nth-child(5) {
+        border: none;
+        
         button {
           width: 50%;
           height: 28px;
-          padding: 0;
           border: none;
           font-size: 13px;
           color: black;
@@ -96,7 +80,6 @@
         a > button {
           width: 50%;
           height: 28px;
-          padding: 0;
           border: none;
           background-color: inherit;
           font-size: 13px;
@@ -208,3 +191,15 @@
     }
   }
 }
+
+@media screen and (max-width:600px) {
+  .table-workers {
+    font-size: 14px;
+  }
+}
+@media screen and (min-width:600px) {
+  .table-workers {
+    font-size: 16px;
+  }
+}
+
