--- a/src/client/components/App/ChooseWorker/ChooseWorker.less
+++ b/src/client/components/App/ChooseWorker/ChooseWorker.less
@@ -9,7 +9,6 @@
     font-size: 50px;
     position: absolute;
     left: 0;
-   
     padding: 0;
     border: none;
     color: inherit;
@@ -17,66 +16,17 @@
     outline: none;
   }
 
-  &__header {
-    width: 100%;
-    height: 10%;
-    text-align: center;
-    font-size: 20px;
-  }
+  
 
   &__table {
-    width: 92%;
-    flex: 1;
     display: flex;
     flex-direction: column;
+    padding-top: 10px;
     margin: auto;
     border-top: 2px solid #b5b5b5;
     border-bottom: 2px solid #b5b5b5;
     overflow: auto;
     
-    &__worker {
-      width: 94%;
-      height: 60px;
-      margin-left: 10px;
-      display: flex;
-      box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
-      border-radius: 5px;
-
-      .worker-image {
-        width: 45px;
-        height: 45px;
-        margin: auto;
-        background-color: #212121;
-        margin-left: 15px;
-      }
-
-      .worker-info {
-        flex: 1 1 100px;
-        margin-left: 15px;
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-
-        &__name {
-          height: 20px;
-          padding-top: 10px;
-          width: 70%;
-        }
-
-        &__city {
-          height: 25px;
-          width: 70%;
-          font-size: 13px;
-        }
-
-        &__rating {
-          height: 60px;
-          padding-top: 10px;
-          text-align: right;
-          padding-right: 20px;
-        }
-      }
-    }
 
     &__worker:hover {
       background-color: rgba(213, 211, 200, 0.46);
@@ -88,14 +38,10 @@
   }
 
   &__button-confirm {
-    margin-bottom: 10px;
-    position: relative;
-    height: 10%;
+    flex: 0 0 15%;
+    padding-left: 10%; 
 
     button {
-      position: absolute;
-      left: 35px;
-      bottom: 5px;
       height: 35px;
       width: 90px;
       padding: 0;
@@ -114,15 +60,76 @@
 @media screen and (max-width:600px) {
   .choose-worker {
     width: 440px;
-    height: 410px;
+    height: 390px;
+
+    &__table {
+      flex: 1 0;
+      width: 82%;
+      margin-bottom: 20px;
+
+      &__worker {
+        width: 94%;
+        height: 42px;
+        margin-left: 10px;
+        display: flex;
+        box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+        border-radius: 5px;
+        cursor: pointer;
+  
+        .worker-image {
+          width: 33px;
+          height: 33px;
+          margin: auto;
+          background-color: #212121;
+          margin-left: 15px;
+        }
+  
+        .worker-info {
+          flex: 1 1 100px;
+          margin-left: 15px;
+          display: flex;
+          flex-direction: column;
+          flex-wrap: wrap;
+  
+          &__name {
+            margin-top: 3px;
+            height: 20px;
+            width: 70%;
+          }
+  
+          &__city {
+            height: 15px;
+            font-size: 13px;
+            width: 70%;
+            font-size: 13px;
+          }
+  
+          &__rating {
+            height: 60px;
+            padding-top: 10px;
+            text-align: right;
+            padding-right: 20px;
+          }
+        }
+      }
+    }
+
+    &__header {
+      margin-top: 20px;
+      width: 100%;
+      height: 10%;
+      text-align: center;
+      font-size: 20px;
+    }
 
     .buttonHome {
-      top: 65px;
-      height: 450px;
-      width: 40px;
-      background-color: rgba(158, 158, 158, 0.1);
+      height: calc(100% - 96px);
+      width: 45px;
+      background-color: rgba(158, 158, 158, 0.041);
       color: rgba(132, 130, 138, 0.58);
       z-index: 3;
+      position: fixed;
+      top: 62px;
     }
   }
 }
@@ -131,6 +138,64 @@
   .choose-worker {
     width: 85%;
     height: 90%;
+
+    &__table {
+      flex: 1;
+      width: 92%;
+      margin-bottom: 20px;
+
+      &__worker {
+        width: 94%;
+        height: 60px;
+        margin-left: 10px;
+        display: flex;
+        box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+        border-radius: 5px;
+        cursor: pointer;
+  
+        .worker-image {
+          width: 45px;
+          height: 45px;
+          margin: auto;
+          background-color: #212121;
+          margin-left: 15px;
+        }
+  
+        .worker-info {
+          flex: 1 1 100px;
+          margin-left: 15px;
+          display: flex;
+          flex-direction: column;
+          flex-wrap: wrap;
+  
+          &__name {
+            height: 20px;
+            padding-top: 10px;
+            width: 70%;
+          }
+  
+          &__city {
+            height: 25px;
+            width: 70%;
+            font-size: 13px;
+          }
+  
+          &__rating {
+            height: 60px;
+            padding-top: 10px;
+            text-align: right;
+            padding-right: 20px;
+          }
+        }
+      }
+    }
+
+    &__header {
+      width: 100%;
+      height: 10%;
+      text-align: center;
+      font-size: 20px;
+    }
 
     .buttonHome {
       top: 0;
