--- a/src/client/components/Admin/RefactorOrders/RefactorOrders.less
+++ b/src/client/components/Admin/RefactorOrders/RefactorOrders.less
@@ -1,38 +1,24 @@
+@import '../../../style/global-variable.less';
+@import '../../../style/mixins/index.less';
+
 .refactor-orders {
-  position: relative;
+  .basic-style-modal-refactor;
   top: 4vh;
-  margin: auto;
   width: 340px;
   height: 530px;
-  background-color: #f4f4ea;
-  border: 2px solid #b5b5b5;
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
-  border-radius: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  z-index: 2;
 
   &__header {
-    text-align: center;
-    width: 100%;
+    .basic-style-header;
     padding-top: 30px;
     margin-bottom: 10px;
-    font-size: 20px;
-    position: relative;
 
     a > &__right-button-close {
+      .basic-style-button;
       position: absolute;
       height: 30px;
       width: 30px;
       top: 15px;
       right: 15px;
-      padding: 0;
-      border: none;
-      color: inherit;
-      cursor: pointer;
-      background-color: inherit;
-      outline: none;
       font-size: 30px;
       color: black;
     }
@@ -45,32 +31,14 @@
   }
 
   form {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    & > .input-with-label > input {
-      width: 65%;
-      height: 30px;
-      margin-top: 20px;
-      border-radius: 5px;
-      border: 1px solid gray;
-      padding-left: 10px;
-    }
+    .form-for-refactor
 
     & > button {
+      .basic-style-button;
       height: 35px;
       margin-top: 20px;
       width: 110px;
       font-size: 15px;
-      padding: 0;
-      border: none;
-      font: inherit;
-      color: black;
-      cursor: pointer;
-      outline: none;
       border: 1px solid #b9b9b5;
       border-radius: 10px;
       background-color: rgba(236, 236, 232, 0.8);
@@ -79,42 +47,13 @@
     & > button:hover {
       background-color: rgba(226, 226, 222, 0.8);
     }
-
-    .refactor-orders__order-select {
-      width: 100%;
-      text-align: center;
-      position: relative;
-      height: 60px;
-
-      label {
-        font-size: 14px;
-        position: absolute;
-        left: 17%;
-        color: #212121;
-      }
-
-      select {
-        width: 68%;
-        height: 33px;
-        margin-top: 20px;
-        border-radius: 5px;
-        border: 1px solid gray;
-      }
-    }
   }
 }
 
 .modal-window {
-  position: absolute;
-  top: 0;
-  height: 100vh;
-  width: 100vw;
-  background-color: rgba(32, 34, 33, 0.37);
-  z-index: 2;
+  .modal-window-for-refactor;
 }
 
 .edit-order {
   height: 595px;
 }
-
-
