--- a/src/client/style/global-variable.less
+++ b/src/client/style/global-variable.less
@@ -1,6 +1,7 @@
 @app-background-color: radial-gradient(circle farthest-corner at 50px 50px, #FBF2EB, #009fa5);
 @mobile-app-background-color: #eecca0;
 @tables-color: #f5f5eb;
+@modal-background-color: #f4f4ea;
 @footer-color: rgb(230, 231, 245);
 @header-color: rgb(230, 231, 245);
 @image-background: url(../image/background.png) no-repeat right -10px bottom -10px;
