--- a/src/client/style/global-variable.less
+++ b/src/client/style/global-variable.less
@@ -5,6 +5,7 @@
 @footer-color: rgb(230, 231, 245);
 @header-color: rgb(230, 231, 245);
 @image-background: url(../image/background.png) no-repeat right -10px bottom -10px;
+@modal-background: rgba(32, 34, 33, 0.37);
 
 @app-border-style: 1px solid rgba(128, 128, 128, 0.4);
 
