--- a/src/client/style/mixins/mixins-for-refactor-modal.less
+++ b/src/client/style/mixins/mixins-for-refactor-modal.less
@@ -1,3 +1,5 @@
+@import '../global-variable.less';
+
 .basic-style-button {
     padding: 0;
     border: none;
@@ -25,7 +27,7 @@
     top: 0;
     height: 100vh;
     width: 100vw;
-    background-color: rgba(32, 34, 33, 0.37);
+    background-color: @modal-background;
     z-index: 2;
 }
 
