--- a/src/client/style/mixins/mixins-for-refactor-modal.less
+++ b/src/client/style/mixins/mixins-for-refactor-modal.less
@@ -1,6 +1,6 @@
 @import '../global-variable.less';
 
-.basic-style-button {
+.basic-style-button() {
     padding: 0;
     border: none;
     color: inherit;
@@ -9,7 +9,7 @@
     outline: none;
 }
 
-.basic-style-modal-refactor {
+.basic-style-modal-refactor() {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -22,7 +22,7 @@
     z-index: 2;
 }
 
-.modal-window-for-refactor {
+.modal-window-for-refactor() {
     position: absolute;
     top: 0;
     height: 100vh;
@@ -31,7 +31,7 @@
     z-index: 2;
 }
 
-.basic-style-header {
+.basic-style-header() {
     text-align: center;
     width: 100%;
     padding-top: 40px;
@@ -40,7 +40,7 @@
     position: relative;
 }
 
-.form-for-refactor {
+.form-for-refactor() {
     width: 100%;
     height: 100%;
     display: flex;
