--- a/src/client/components/Admin/RefactorOrders/RefactorOrders.less
+++ b/src/client/components/Admin/RefactorOrders/RefactorOrders.less
@@ -1,19 +1,21 @@
 @import '../../../style/global-variable.less';
-@import '../../../style/mixins/index.less';
 
 .refactor-orders {
-  .basic-style-modal-refactor;
   top: 4vh;
   width: 340px;
   height: 530px;
 
   &__header {
-    .basic-style-header;
     padding-top: 30px;
     margin-bottom: 10px;
 
     a > &__right-button-close {
-      .basic-style-button;
+      padding: 0;
+      border: none;
+      color: inherit;
+      cursor: pointer;
+      background-color: inherit;
+      outline: none;
       position: absolute;
       height: 30px;
       width: 30px;
@@ -31,10 +33,8 @@
   }
 
   form {
-    .form-for-refactor;
 
     & > button {
-      .basic-style-button;
       height: 35px;
       margin-top: 20px;
       width: 110px;
@@ -48,10 +48,6 @@
       background-color: rgba(226, 226, 222, 0.8);
     }
   }
-}
-
-.modal-window {
-  .modal-window-for-refactor;
 }
 
 .edit-order {
