--- a/src/client/components/Admin/RefactorWorkers/RefactorWorkers.less
+++ b/src/client/components/Admin/RefactorWorkers/RefactorWorkers.less
@@ -1,18 +1,20 @@
 @import '../../../style/global-variable.less';
-@import '../../../style/mixins/index.less';
 
 .refactor-workers {
-  .basic-style-modal-refactor;
   top: 13vh;
   width: 340px;
   height: 430px;
  
 
   &__header {
-    .basic-style-header;
 
     a > &__right-button-close {
-      .basic-style-button;
+      padding: 0;
+      border: none;
+      color: inherit;
+      cursor: pointer;
+      background-color: inherit;
+      outline: none;
       position: absolute;
       height: 30px;
       width: 30px;
@@ -30,10 +32,8 @@
   }
 
   form {
-    .form-for-refactor;
 
     & > button {
-      .basic-style-button;
       height: 35px;
       margin-top: 25px;
       width: 110px;
@@ -51,8 +51,4 @@
 
 .add-worker {
   height: 370px;
-}
-
-.modal-window {
-  .modal-window-for-refactor;
 }
