--- a/src/client/style/model-tables.less
+++ b/src/client/style/model-tables.less
@@ -1,93 +1,182 @@
 @import './global-variable.less';
 
-.root-table {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-}
+.table-model {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 
-.root-table__table {
-    flex: 1;
-    overflow: auto;
-    margin-top: 23px;
-}
-
-.html-table {
-    border-collapse: collapse;
-    width: 100%;
-    flex: 1;
-}
-
-.table-title {
+  &__title {
     height: 10px;
     font-weight: bold;
     font-size: 18px;
     padding-left: 70px;
-}
+  }
 
-.button-refactor-models {
-    width: 50%;
-    height: 28px;
-    border: none;
-    font-size: 13px;
-    color: black;
-    cursor: pointer;
-    outline: none;
-    background-color: inherit;
-}
+  &__container {
+    flex: 1;
+    overflow: auto;
+    margin-top: 23px;
 
-.numbers-pages {
+    &__table {
+      border-collapse: collapse;
+      width: 100%;
+      flex: 1;
+
+      tr {
+        background-color: rgba(169, 169, 169, 0.04);
+        height: 50px;
+        border-bottom: 1px solid grey;
+      }
+
+      th, td {
+        padding-left: 10px;
+        padding-right: 10px;
+      }
+
+      th {
+        border-right: 1px solid grey;
+        
+        &:first-child {
+          width: 50px;
+        }
+        
+        &:last-child {
+            width: 100px;
+            min-width: 100px;
+            border-right: none;
+        }
+      }
+
+      td {
+        border-right: 1px solid grey;
+        
+        &:first-child {
+          width: 50px;
+        }
+        
+        &:last-child {
+          width: 100px;
+          min-width: 100px;
+          border-right: none;
+
+          .button-refactor-models {
+            width: 50%;
+            height: 28px;
+            border: none;
+            font-size: 13px;
+            color: black;
+            cursor: pointer;
+            outline: none;
+            background-color: inherit;
+            border-left: 1px solid rgba(105, 105, 105, 0.65);
+          }
+        
+          a > button {
+            width: 50%;
+            height: 28px;
+            border: none;
+            font-size: 13px;
+            color: black;
+            cursor: pointer;
+            outline: none;
+            background-color: inherit;
+          }
+        }
+      }
+    }
+  }
+
+  &__numbers-pages {
     display: flex;
     width: 97.7%;
     height: 30px;
     border: 1px solid #bfbfbf;
     border-radius: 5px;
     margin-bottom: 5px;
+
+    &__container {
+      flex: 1;
+      display: flex;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.03);
+      align-items: center;
+      justify-content: center;
+      border-collapse: collapse;
+
+      &__page {
+        width: 30px;
+        height: 30px;
+        border-right: 1px solid #b9b9b5;
+        border-left: 1px solid #b9b9b5;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-right: 5px;
+        padding-left: 5px;
+        border-radius: 5px;
+        cursor: pointer;
+        margin-left: 3px;
+
+        &:hover {
+          background-color: #d1d4d1;
+        }
+      }
+      .active {
+        background-color: rgba(209, 212, 209, 0.8);
+        cursor: default;
+      }
+    }
+
+    &__bttn-add {
+      flex: 0 0 85px;
+      height: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      a {
+        width: 100%;
+        height: 100%;
+        
+        & > button {
+          height: 30px;
+          width: 85px;
+          padding: 0;
+          border: none;
+          font: inherit;
+          color: black;
+          cursor: pointer;
+          outline: none;
+          border-left: 1px solid #b9b9b5;
+          border-radius: 5px;
+          background-color: #f4f4f0;
+        
+          .MuiSvgIcon-root {
+            font-size: 28px;
+          }
+        
+          &:hover {
+            background-color: #f0f0ec;
+          }
+        }
+      }
+    }
+  }
 }
 
-.number-one-page {
-    width: 30px;
-    height: 30px;
-    border-right: 1px solid #b9b9b5;
-    border-left: 1px solid #b9b9b5;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-right: 5px;
-    padding-left: 5px;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-left: 3px;
+.text-to-center {
+    text-align: center;
 }
 
-.container-number-pages {
-    flex: 1;
-    display: flex;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.03);
-    align-items: center;
-    justify-content: center;
-    border-collapse: collapse;
+@media screen and (max-width:600px) {
+  .table-model {
+    font-size: 14px;
+  }
 }
-
-.container-bttn-add {
-    flex: 0 0 85px;
-    height: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  
+@media screen and (min-width:600px) {
+  .table-model {
+    font-size: 16px;
+  }
 }
-
-.container-bttn-add__bttn-add {
-    height: 30px;
-    width: 85px;
-    padding: 0;
-    border: none;
-    font: inherit;
-    color: black;
-    cursor: pointer;
-    outline: none;
-    border-left: 1px solid #b9b9b5;
-    border-radius: 5px;
-    background-color: #f4f4f0;
-}
+  
