--- a/src/client/style/global-variable.less
+++ b/src/client/style/global-variable.less
@@ -1,5 +1,5 @@
 @app-background-color: radial-gradient(circle farthest-corner at 50px 50px, #FBF2EB, #009fa5);
-@mobile-app-background-color: #eecca0;
+@mobile-app-background-color: #009fa5;
 @tables-color: #f5f5eb;
 @modal-background-color: #f4f4ea;
 @footer-color: rgb(230, 231, 245);
