--- a/src/client/components/App/Header/header.less
+++ b/src/client/components/App/Header/header.less
@@ -6,8 +6,8 @@
   display: flex;
   border-bottom: @app-border-style;
 
+  
   .container-logo {
-    flex: 0 1 170px;
     align-items: center;
     display: flex;
     cursor: pointer;
@@ -23,7 +23,6 @@
 
     &__user {
       height: 30px;
-      width: 160px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -36,7 +35,7 @@
   }
 
   .container-buttons {
-    display: flex;
+    flex: 0 0 60px;
     font-family: Verdana;
     font-weight: 500;
     font-size: 18px;
@@ -59,10 +58,10 @@
   }
 }
 
-@media screen and (max-width:600px) {
+@media screen and (max-width:850px) {
   .header {
     flex: 0 0 60px;
-    min-width: 410px;
+    min-width: 320px;
     box-sizing: border-box;
     border-bottom: @app-border-style;
 
@@ -70,11 +69,50 @@
       flex: 0 1 170px;
       min-width: 170px;
       margin-left: 10px;
-      background-size: 170px 60px;
+      background-size: 180px 60px;
     }
 
     .container-user {
-      font-size: 13px;
+      flex: 1 1 160px;
+      font-size: 14px;
+
+      &__user {
+        margin-right: 5px;
+        width: 160px;
+      }
+    }
+
+    .container-buttons {
+      flex: 0 0 60px;
+
+      button {
+        border-left: 1px solid #a9b0b4;
+
+        .MuiSvgIcon-root {
+          font-size: 20px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width:420px) {
+  .header {
+    flex: 0 0 60px;
+    min-width: 320px;
+    box-sizing: border-box;
+    border-bottom: @app-border-style;
+
+    .container-logo {
+      flex: 0 1 70px;
+      min-width: 70px;
+      margin-left: 10px;
+      background-size: 200px 70px;
+    }
+
+    .container-user {
+      width: 160px;
+      font-size: 14px;
 
       &__user {
         margin-right: 5px;
@@ -95,7 +133,7 @@
   }
 }
 
-@media screen and (min-width:600px) {
+@media screen and (min-width:850px) {
   .header {
     flex: 0 0 80px;
     min-width: 695px;
@@ -116,6 +154,7 @@
 
     .container-user {
      font-size: 17px;
+     width: 160px;
 
       &__user {
         margin-right: 40px;
