hide text logo if small view

--- a/src/client/style/model-tables.less
+++ b/src/client/style/model-tables.less
@@ -173,6 +173,17 @@
     font-size: 14px;
   }
 }
+
+@media screen and (max-width:420px) {
+  .table-model {
+    &__title {
+      flex: 0 0 10px;
+      font-size: 15px;
+      padding-left: 30px;
+      margin-top: 10px;
+    }
+  }
+}
   
 @media screen and (min-width:600px) {
   .table-model {
