--- a/src/client/components/App/Header/header.less
+++ b/src/client/components/App/Header/header.less
@@ -104,18 +104,25 @@
     border-bottom: @app-border-style;
 
     .container-logo {
-      flex: 0 1 70px;
-      min-width: 70px;
+      flex: 0 1 60px;
+      min-width: 60px;
       margin-left: 10px;
-      background-size: 200px 70px;
+      background-size: 180px 60px;
+    }
+
+    .full-logo {
+      flex: 0 1 200px;
+      min-width: 200px;
+      background-size: 180px 60px;
     }
 
     .container-user {
       width: 160px;
       font-size: 14px;
+      font-weight: 550;
 
       &__user {
-        margin-right: 5px;
+        margin-right: 10px;
       }
     }
 
