--- a/src/client/components/App/Preloader/Preloader.less
+++ b/src/client/components/App/Preloader/Preloader.less
@@ -18,6 +18,7 @@
   top: 50%;
   width: 80px;
   height: 80px;
+  margin: -40px 0 0 -40px;
   border-radius: 50%;
   border: 2px solid transparent;
   border-top-color: #db6e00;
