fix bug with scroll

--- a/src/client/components/Admin/Bar/AdminBar.less
+++ b/src/client/components/Admin/Bar/AdminBar.less
@@ -1,9 +1,8 @@
 @import '../../../style/global-variable.less';
 
 .bar-choose-item {
-  flex: none;
   width: 100%;
-  height: 40px;
+  flex: 0 0 40px;
   box-shadow: @app-box-shadows;
   background-color: @tables-color;
   display: flex;
