--- a/src/client/components/Admin/Main/MainAdmin.less
+++ b/src/client/components/Admin/Main/MainAdmin.less
@@ -1,13 +1,14 @@
 @import '../../../style/global-variable.less';
 
 .admin-main {
-  flex: 1;
+  flex: 1 1;
   display: flex;
   flex-direction: column;
   min-width: 320px;
+  overflow-y: auto;
 
   .admin-content {
-    flex: 1 0;
+    flex: 1 1;
     display: flex;
     flex-direction: column;
     align-items: center;
