--- a/src/client/components/App/OrderForm/OrderForm.less
+++ b/src/client/components/App/OrderForm/OrderForm.less
@@ -46,6 +46,7 @@
     box-sizing: border-box;
     border: @app-border-style;
     border-radius: 5px;
+    border-top-left-radius: 10px;
     box-shadow: @app-box-shadows;
     
 
