--- a/src/client/style/App.less
+++ b/src/client/style/App.less
@@ -14,13 +14,11 @@ body {
     height: 100vh;
     width: 100vw;
     position: relative;
-    overflow-x: auto;
 }
 
 .app-main {
     display: flex;
     flex-direction: column;
-    overflow: hidden;
     width: 80vw;
     height: 100%;
 }
@@ -29,6 +27,8 @@ body {
     flex: 1;
     display: flex;
     border-radius: 5px;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
     background-color: inherit;
     overflow-y: auto;
 
@@ -63,7 +63,6 @@ body {
     }
 
     .app-main {
-        width: 80%;
         margin: auto;
     }
 
